--- a/src/map_list.css
+++ b/src/map_list.css
@@ -18,5 +18,5 @@
     overflow-y: auto;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 90%;
 }
