--- a/src/map_selection.css
+++ b/src/map_selection.css
@@ -1,4 +1,3 @@
 .MapSelection {
     width: 100%;
-    height: 90%;
 }
